[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scenes/casino/spin_wheel.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="spin_btn"]
bg_color = Color(0.7, 0.2, 0.1, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
content_margin_left = 20.0
content_margin_top = 10.0
content_margin_right = 20.0
content_margin_bottom = 10.0

[node name="SpinWheel" type="Control"]
custom_minimum_size = Vector2(300, 440)
script = ExtResource("1")

[node name="WheelContainer" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 0
position = Vector2(30, 10)
size = Vector2(240, 240)
clip_contents = true

[node name="SpinButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 70.0
offset_top = 285.0
offset_right = 230.0
offset_bottom = 330.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("spin_btn")
text = "SPIN!"

[node name="ResultLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_top = 340.0
offset_right = 300.0
offset_bottom = 380.0
theme_override_colors/font_color = Color(1, 0.92, 0.4, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1

[node name="CooldownLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_top = 385.0
offset_right = 300.0
offset_bottom = 420.0
theme_override_colors/font_color = Color(0.7, 0.85, 1, 0.8)
theme_override_font_sizes/font_size = 14
horizontal_alignment = 1
